Motor system added

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2415,8 +2415,7 @@ Romberg's sign                      & \multicolumn{8}{c|}{}                     
 \end{table}
 \renewcommand{\arraystretch}{1}
 %------------------------}}}
-
-
+%------------Examination of motor system-----------{{{
 															\chapter*{\centering Examination Of Motor System}
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
@@ -2434,6 +2433,70 @@ Examination of the motor system is carried out by assessing,
 \end{itemize}
 
 \section*{Nutrition Or Bulk Of The Muscle:}
+\addfig{
+	\begin{figure}[H]
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/abductorPollicisBrevis.jpg}
+			\subcaption{Testing abductor Pollicis brevis}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/opponensPollicis.jpg}
+			\subcaption{Testing opponens pollicis}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/interossesi.jpg}
+			\subcaption{Testing Dorsal and palmar interossei}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/flexorArm.jpg}
+			\subcaption{Testing Biceps}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/extensorArm.jpg}
+			\subcaption{Testing Triceps}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/deltoid.jpg}
+			\subcaption{Testing Deltoid}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/supraspinatus.jpg}
+			\subcaption{Testing Supraspinatus:}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/infraspinatus.jpg}
+			\subcaption{Testing Infraspinatus:}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/pectoralisMajor.jpg}
+			\subcaption{Testing Pectoralis Major}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/hipFlexion.jpg}
+			\subcaption{Testing hip flexors}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/hipExtension.jpg}
+			\subcaption{Testing hip extensors}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.25\textwidth}
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/hipAbduction.jpg}
+			\subcaption{Testing hip Abductors}
+		\end{subfigure}
+		\caption*{Examination Of Muscle Power}
+	\end{figure}
+}
 \begin{itemize}
 \item{Inspect the different groups of muscles of the body on both sides for any wasting or contractures.}
 \item{Palpate the muscles and feel for the consistency. Atrophic muscle appears smaller and feels soft and flabby. Hypertrophic muscle appears bulky and are firm in consistency.}
@@ -2468,28 +2531,210 @@ Examination of the motor system is carried out by assessing,
 	\subsection*{Grading of power:}
 	\par
 	\begin{align*}
-	Grade 0 	&:	Complete paralysis. \\
-	Grade 1 	&: 	Flicker of contraction only.\\
-	Grade 2 	&: 	Muscle movement only when gravity is eliminated\\
-	Grade 3 	&:	Muscle movement against the force of gravity, but not against resistance. \\
-	Grade 4 	&:	Some degree of weakness, usually described as poor, fair or moderate 		strength. \\
-	Grade 5 	&:	Normal power.\\
+		\text{Grade 0} 	&:	\text{Complete paralysis.} \\
+	\text{Grade 1} 	&: 	\text{Flicker of contraction only.}\\
+		\text{Grade 2} 	&: \text{Muscle movement only when gravity is eliminated}\\
+	\text{Grade 3} 	&:	\text{Muscle movement against the force of gravity, but not against resistance.} \\
+	\text{Grade 4} 	&:	\text{Some degree of weakness, usually described as poor, fair or moderate 		strength.} \\
+	\text{Grade 5} 	&:	\text{Normal power.}\\
 	\end{align*}
 
 
 	\subsection*{Testing muscles of the upper limb:}
-	1. Abductor pollicis brevis:
+	\begin{enumerate}
+\item{ Abductor pollicis brevis:
+	\par
 	Ask the subject to abduct the thumb against resistance in a plane at right angle to the palmar aspect of the index finger.
-	2. Opponens pollicis:
+}
+\item{ Opponens pollicis:
+	\addfig{
+		\begin{figure}[H]
+		\begin{subfigure}[t]{\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/hipAdduction.jpg}
+			\subcaption{Testing hip Adductors}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/kneeFlexion.jpg}
+			\subcaption{Testing hip Adductors}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/motorSystem/kneeExtension.jpg}
+			\subcaption{Testing hip Adductors}
+		\end{subfigure}
+		\hspace{\fill}
+			\caption*{Examination Of Muscle Power}
+		\end{figure}
+		}
+	\par
 	Ask the subject to touch the tip of his little finger with the point of his thumb against resistance without moving the little finger.
-	3. First dorsal interosseous:
+}
+\item{ First dorsal interosseous:
+	\par
 	Ask the subject to abduct his index finger against resistance.
-	4. Interossei and lumbricals: Dorsal interossei:
+}
+\item{ Interossei and lumbricals: Dorsal interossei:
+	\par
 	Ask the subject to abduct the fingers against resistance. The dorsal interossei causes the abduction of the fingers at the metacarpophalangeal joint.
-	Palmar interossei:
+}
+\item{	Palmar interossei:
+	\par
 	Place the paper between the fingers and ask the subject to hold it. Try to pull the paper out. The palmar interossei causes adduction of the fingers at the metacarpophalangeal joint.
-	Lumbricals:
+			}
+\item{Lumbricals:
+	\par
 	Ask the subject to flex the metacarpophalangeal joints and to extend the distal interphalangeal joints against resistance.
+}
+\item{ Flexors of the fingers: 
+\par
+Ask the subject to squeeze the examiner's index and middle fingers on both sides and assess the force of grip.
+}
+\item{ Flexors of the wrist: 
+\par
+Ask the subject to flex the wrist against resistance.
+}
+\item{ Extensors of the wrist: 
+\par
+Ask the subject to make a fist and hold the hand with palm facing downwards. Offer resistance when the subject is asked to extend the wrist.
+}
+\item{ Brachio-radialis: 
+\par
+Ask the subject to place the forearm in mid prone position, and flex the forearm. Offer resistance by grasping the hand.
+}
+\item{ Biceps: 
+\par
+With the forearm in full supination, ask the subject to flex the forearm against resistance.
+}
+\item{ Triceps: 
+\par
+The subject is asked to extend the flexed forearm against resistance.
+}
+\item{ Supraspinatus: 
+\par
+Ask the subject to keep the arm by the side of the body and to lift his arm at right angles to his side against resistance. The first 300of abduction is carried out by supraspinatus. The remaining 600 is by the deltoid.
+}
+\item{ Deltoid: 
+\par
+Ask the subject to make forward and backward movement of the abducted arm against resistance.
+}
+\item{ Infraspinatus: 
+\par
+Ask the subject to flex the forearm at right angle and tuck the elbow to his side. Ask to rotate his forearm outwards against resistance. The elbow has to be tucked to the side throughout.
+}
+\item{ Pectoralis: 
+\par
+Ask the subject to stretch his arms out in front of him and to clasp his hands together while the examiner attempts to hold them apart.
+}
+\item{ Serratus anterior: 
+\par
+Ask the subject to push forward his hands against a wall. If there is paralysis of serratus anterior, winging of scapula occurs on that side.
+}
+\item{ Lattisimus dorsi: 
+\par
+Ask the subject to clasp his hands behind his back while the examiner stands behind him and offers passive resistance.
+}	
+\end{enumerate}
+\subsection*{Muscles	of	the	trunk:}	
+\subsubsection*{Abdominal muscles:}
+	With the subject in supine position, ask the subject to lift up his head against resistance. In paralysis of lower abdominal segment, umbilicus moves up. When the upper segment is paralysed umbilicus is pulled down. This is called Beevor's sign.
+	\par
+	In weakness of the abdominal muscles, the subject will not be able to sit up in bed from the supine position without the aid of his hands(Babinski’s rising up sign).
+	\subsubsection*{Muscles of the back: (Erector spinae).}
+	Ask the subject to lie with his face down and to raise his head from the bed by extending his neck and the back. Muscles of the back stand out prominently.
+\subsection*{Muscles of lower limb:}
+\begin{enumerate}
+\item{Muscles of foot and toes:}
+\begin{itemize}
+	\item{Dorsi-flexors and plantar flexors of the feet and toes:
+		\par
+Ask the subject to dorsiflex and plantarflex the distal foot against resistance.
+		}
+	\item{Evertors and invertors:
+		\par
+Ask the subject to evert and invert against resistance. Eversion and inversion takes place at the subtalar joint.
+		}
+\end{itemize}
+\item{Extensors of knee:
+	\par
+In supine position, ask the subject to flex his knee and to extend the leg while offering resistance on the shin just above the ankle.
+		}
+\item{Flexors of knee:
+	\par
+Raise the leg up from the bed, supporting the thigh with your left hand and holding the ankle with your right hand, ask the subject to bend his knee
+		}
+\item{ Extensors of hip: 
+\par
+With the limb fully extended, lift the subject’s foot off the bed, and ask him to bring the limb down to the bed against resistance.
+}
+
+\item{ Flexors of thigh: 
+\par
+
+With the leg extended, ask the subject, to raise his leg off the bed against resistance without bending the knee. Resistance is given just above the ankle joint.
+}
+
+\item{ Abductors of thigh: 
+\par
+With the legs placed together in the midline, ask the subject to abduct his legs against resistance.
+}
+
+\item{ Adductors of thigh: 
+\par
+With the legs kept apart, ask the subject to bring the legs to midline against resistance.
+}
+
+\item{ Rotators of the thigh or hip:
+	\par
+With the lower limbs extended on the bed, ask the subject to rotate the limb outwards or inwards against resistance.
+}
+\end{enumerate}
+
+\section*{Co-ordination:} 
+\emph{(refer experiment- Cerebellar function test)}
+\section*{Reflexes:}
+\emph{(refer experiment- Reflexes)}
+\section*{Gait:}
+Ask the subject to walk barefoot in a straight line, and to turn round at a given point and then to come back. While walking, observe whether he walks in a straight line and if he deviates in any direction. Observe for automatic associated movements. .
+\begin{itemize}
+\item{Festinant gait in Parkinson's disease.}
+\item{Waddling gait in muscular dystrophy and myopathies.}
+\item{High stepping gait in common peroneal nerve palsy.}
+\end{itemize}
+
+	\section*{Involuntary Movements:}
+
+\subsection*{Tremor:}
+Tremor is a regular, rhythmic, purposeless to and fro movement of a part of the body due to alternate contraction and relaxation of the agonist and antagonist muscles. It is of two types. Fine tremor and coarse tremor
+
+\subsubsection*{Causes of tremor:}
+Physiological: Anxiety, old age and exposure to cold\\
+Pathological: Parkinsonism, cerebellar disorders, thyrotoxicosis,  	hypoglycaemia, alcoholism and heavy metal poisoning.
+\subsection*{Myoclonus:}
+	Sudden shock like contraction of a single muscle or a group of muscles. 
+	\subsection*{Athetosis:}
+		It is characterized by slow, worm like writhing movements of the extremities affecting chiefly the fingers and the wrist. Seen in lesion of Globus pallidus.
+		\subsection*{Chorea:}
+			It is characterized by brisk, jerky, purposeless and graceful movements of the distal part of the extremities and is usually associated with twitching of the face. Seen in Huntington's disease and Rheumatic heart disease.
+			\subsection*{Ballismus:}
+				It is a rare involuntary movement characterized by a sudden violent movement of the body. Occurs in lesion of subthalamic nucleus. When it occurs in one half of the body it is called hemiballismus.
+				\subsection*{Ticks:}
+				Sudden, rapid, repeated, coordinated and purposeless movements that occur in the form of blinking of the eyes or wriggling of the shoulders.
+				\section*{Questions:}
+				\begin{enumerate}
+\item{Define muscle tone.}
+\item{Define hemiparesis, hemiplegia and paraplegia.}
+\item{Name the descending tract that controls voluntary motor movements?}
+\item{Name the extra-pyramidal tracts.}
+\item{What are the differences between UMN lesion and LMN lesion?}
+\item{List out the differences between spasticity and rigidity.}
+				\end{enumerate}
+\section*{Inference:}
+\vspace{2in}
+%-------------------------------}}}
 	\end{document}
 
 
