--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2735,6 +2735,118 @@ Pathological: Parkinsonism, cerebellar disorders, thyrotoxicosis,  	hypoglycaemi
 \section*{Inference:}
 \vspace{2in}
 %-------------------------------}}}
+
+															\chapter*{\centering Reflexes}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\section*{Definition:}
+Reflex is an automatic (involuntary) response to a stimulus. The response depends on the integrity of the reflex arc and is influenced by the higher centres.
+\paragraph{Components Of Reflex Arc:}
+\begin{enumerate}
+\item{ Receptor}
+\item{ Afferent}
+\item{ Centre}
+\item{ Efferent}
+\item{ Effector organ}
+\end{enumerate}
+\paragraph{Types Of Reflexes:}
+\begin{itemize}
+\item{Superficial reflexes}
+\item{Deep reflexes}
+\item{Visceral reflexes}
+\end{itemize}
+\section*{Aim:} 
+To elicit superficial, deep and visceral reflexes in the subject.
+\section*{Apparatus Required:}
+Knee hammer, cotton swab.
+\section*{Superficial Reflexes: }
+These are 'polysynaptic reflexes'.
+\begin{itemize}
+\item{Stimulus: Superficial structure. ( skin / mucous membrane)}
+\item{Response: Contraction of underlying muscles.}
+\item{Pathway:}
+	\begin{itemize}
+\item{Afferent - Sensory nerve (component of mixed nerve)}
+\item{Center - Spinal cord or brainstem or forebrain.}
+\item{Efferent - Motor nerve (component of mixed nerve) to underlying muscles.}
+	\end{itemize}
+\end{itemize}
+\subsection*{Conjunctival reflex:}
+	Ask the subject to look at a distant object. Touch the bulbar conjunctiva with a fine wisp of sterile cotton brought from the side. Test both the eyes.\newline
+\textbf{Response}: Closure of both eyes.\\  
+\textbf{Afferent}– 5th cranial nerve. \textbf{Efferent} – 7th cranial nerve.
+\subsection*{Corneal reflex:}
+Ask the subject to look at a distant object. Then touch the limbus (sclerocorneal junction) with a sterile cotton wool brought from the side of the subject. Test both the eyes.\\
+\textbf{Response:}Closure of both eyes.\\
+\textbf{Afferent}– 5th cranial nerve. \textbf{Efferent}– 7th cranial nerve.
+\subsection*{Abdominal Reflex: (T7- T12)}
+Ask the subject to lie in supine position with abdomen uncovered.\\
+\textbf{Stimulus}: With the blunt end of the knee hammer, stroke lightly and briskly on each quadrant of abdomen above and below the umbilicus from outer aspect towards midline.\\
+\textbf{Response}: Contraction of abdominal muscles in that quadrant.
+\subsection*{Plantar Reflex: (L5, SI)}
+Ask the subject to lie in supine position with the muscles of lower limbs completely relaxed.\\
+\textbf{Stimulus}: With the blunt end of the knee hammer, outer edge of the sole of foot is stroked gently along the lateral border starting from heel towards little toe and then along the bases of other toes medially.\\
+\textbf{Normal Response: }\\
+"Extensor plantar response" manifested by
+\begin{itemize}
+\item{Plantar flexion of all the toes at metatarsophalangeal and inter phalangealjoints.}
+\item{Inversion and plantar flexion of ankle.}
+\end{itemize}
+\textbf{Abnormal Response:}\\
+"Extensor plantar response" manifested by
+\begin{itemize}
+\item{Dorsiflexion of great toe with abduction and fanning out of other toes.}
+\item{Eversion and dorsiflexion of ankle.}
+\item{Also called as Babinsk's sign.}
+\item{The diagnostic feature of UMN lesion especially corticospinal tract lesion.}
+\item{Normally seen in newborns and infants (primitive reflex), sleep and deep anaesthesia.}
+\end{itemize}
+Other reflexes:
+Scapular reflex: C5-T1.
+Anal reflex: S3-S4.
+Cremasteric reflex: LI - L2.
+Bulbo-cavernal reflex: S3, S4.
+Cilio-spinal reflex: C8,Tl-T2.
+B. DEEP REFLEXES:
+These are "monosynaptic reflexes", also called as "stretch reflexes".
+H. Stimulus: Sudden stretch of muscle at the tendinous region
+I. Receptor: Muscle spindle
+J. Afferent: Sensory nerve component of mixed nerve
+K. Centre: Spinal cord
+L. Efferent: Motor nerve component of mixed nerve.
+When the tendon of a lightly stretched muscle, is struck by a single sharp blow with soft rubber hammer, the muscle contracts briefly. This is tendon or stretch reflex.
+Before performing the deep tendon reflexes, instruct the subject to keep the muscles relaxed. Expose the corresponding muscles to see for the contraction.
+1. Jaw jerk: (Afferent- V, Efferent- V, Centre-Pons)
+	Ask the subject to let his jaw sag open slightly. Place the left thumb over the chin and tap with the knee hammer.
+Response: Closure of mouth.
+2. Biceps jerk: (C5, C6)
+Keep the elbow of the subject partially flexed and place the fore arm in a semi prone position, relaxing on the examiner's fore arm. Place the thumb over the biceps tendon and strike the thumb with the knee hammer.
+Response: (contraction of the biceps) flexion of the elbow.
+3. Triceps jerk: (C6, C7)
+Flex the elbow of the subject and rest the forearm across the subject's chest. Tap the triceps tendon just above the olecranon process gently with the knee hammer.
+Response: (contraction of the triceps) Extension of the elbow.
+
+4. Supinator jerk/Brachio-radialis jerk: (C5, C6)
+Flex the elbow of the subject and keep the forearm in a semiprone position. Tap gently the tendon overlying the radial styloid process with the knee hammer.
+Response: (contraction of brachio-radialis muscle) Supination of the forearm.
+5. Knee jerk: (L1,L2, L3)
+Ask the Subject to lie in a supine position with the Quadriceps femoris muscle relaxed. Support the knee to be tested with the hand underneath the knee joint. Strike sharply the Quadriceps tendon (patellar tendon) with a knee hammer.
+Response:(contraction of quadriceps muscle) extension of leg at the knee. Reflex may also be elicited in a sitting posture. The subject is seated on a stool
+with one leg crossed over the other with the leg hanging loosely. Examiner's hand is placed over the quadriceps muscle and the patellar tendon is gently tapped with the knee hammer.
+6. Ankle jerk: (S1-S2)
+Ask the subject to lie in a supine position. Flex the lower limb at the knee joint. Stretch the calf muscles by dorsiflexion at the ankle joint. Strike sharply at the achille's tendon.
+Response: Contraction of calf muscles with plantar flexion.
+This reflex can also be elicited when the subject is kneeling on a chair.
+Clonus: It is a sign of increased reflex activity characterized by repetitive muscular contraction produced by stretch
+Grading of reflexes:
+Grade 0: Absent
+Grade 1: Present (as a normal ankle jerk)
+Grade 2: Brisk (as a normal knee jerk)
+Grade 3: Very brisk
+Grade 4: Clonus
+Reinforcement technique:
+The Jendrassik's maneuver is applied to those subjects in whom deep tendon reflexes are difficult to elicit. Reinforcement technique acts by increasing excitability of anterior horn cells and by increasing the sensitivity of muscle spindle to stretch by increasing the gamma motor discharge.
 	\end{document}
 
 
