--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2802,20 +2802,26 @@ Ask the subject to lie in supine position with the muscles of lower limbs comple
 \item{The diagnostic feature of UMN lesion especially corticospinal tract lesion.}
 \item{Normally seen in newborns and infants (primitive reflex), sleep and deep anaesthesia.}
 \end{itemize}
-Other reflexes:
-Scapular reflex: C5-T1.
-Anal reflex: S3-S4.
-Cremasteric reflex: LI - L2.
-Bulbo-cavernal reflex: S3, S4.
-Cilio-spinal reflex: C8,Tl-T2.
-B. DEEP REFLEXES:
+\subsection*{Other reflexes:}
+\begin{itemize}
+\item{Scapular reflex: C5-T1.}
+\item{Anal reflex: S3-S4.}
+\item{Cremasteric reflex: LI - L2.}
+\item{Bulbo-cavernal reflex: S3, S4.}
+\item{Cilio-spinal reflex: C8,Tl-T2.}
+\end{itemize}
+\section*{Deep Reflexes:}
 These are "monosynaptic reflexes", also called as "stretch reflexes".
-H. Stimulus: Sudden stretch of muscle at the tendinous region
-I. Receptor: Muscle spindle
-J. Afferent: Sensory nerve component of mixed nerve
-K. Centre: Spinal cord
-L. Efferent: Motor nerve component of mixed nerve.
+\begin{itemize}
+\item{Stimulus: Sudden stretch of muscle at the tendinous region}
+\item{Receptor: Muscle spindle}
+\item{Afferent: Sensory nerve component of mixed nerve}
+\item{Centre: Spinal cord}
+\item{Efferent: Motor nerve component of mixed nerve.}
+\end{itemize}
+\par
 When the tendon of a lightly stretched muscle, is struck by a single sharp blow with soft rubber hammer, the muscle contracts briefly. This is tendon or stretch reflex.
+\par
 Before performing the deep tendon reflexes, instruct the subject to keep the muscles relaxed. Expose the corresponding muscles to see for the contraction.
 1. Jaw jerk: (Afferent- V, Efferent- V, Centre-Pons)
 	Ask the subject to let his jaw sag open slightly. Place the left thumb over the chin and tap with the knee hammer.
